--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,7 +50,8 @@
         <activity
             android:name=".Map"
             android:exported="false"
-            android:label="@string/title_activity_map" />
+            android:label="@string/title_activity_map"
+            android:parentActivityName=".HomePage"/>
 
         <activity
             android:name=".MainActivity"
