--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -20,8 +20,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FYProject"
-        tools:targetApi="31" >
-
+        tools:targetApi="31">
+<!--        <activity-->
+<!--            android:name=".MedicalHistory"-->
+<!--            android:exported="false">-->
+<!--            <meta-data-->
+<!--                android:name="android.app.lib_name"-->
+<!--                android:value="" />-->
+<!--        </activity>-->
+<!--        &lt;!&ndash; <activity &ndash;&gt;-->
+        <!-- android:name=".HealthProblems" -->
+        <!-- android:exported="false"> -->
+        <!-- <meta-data -->
+        <!-- android:name="android.app.lib_name" -->
+        <!-- android:value="" /> -->
+        <!-- </activity> -->
         <!--
              TODO: Before you run your application, you need a Google Maps API key.
 
@@ -52,7 +65,7 @@
 
         <activity
             android:name=".MainActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -71,6 +84,12 @@
             android:parentActivityName=".HomePage" />
         <activity
             android:name=".Infections"
+            android:parentActivityName=".HomePage" />
+        <activity
+            android:name=".HealthProblems"
+            android:parentActivityName=".HomePage" />
+        <activity
+            android:name=".MedicalHistory"
             android:parentActivityName=".HomePage" />
     </application>
 
