--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,14 +21,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FYProject"
         tools:targetApi="31">
-<!--        <activity-->
-<!--            android:name=".MedicalHistory"-->
-<!--            android:exported="false">-->
-<!--            <meta-data-->
-<!--                android:name="android.app.lib_name"-->
-<!--                android:value="" />-->
-<!--        </activity>-->
-<!--        &lt;!&ndash; <activity &ndash;&gt;-->
+        <!-- <activity -->
+        <!-- android:name=".MedicalHistory" -->
+        <!-- android:exported="false"> -->
+        <!-- <meta-data -->
+        <!-- android:name="android.app.lib_name" -->
+        <!-- android:value="" /> -->
+        <!-- </activity> -->
+        <!-- &lt;!&ndash; <activity &ndash;&gt; -->
         <!-- android:name=".HealthProblems" -->
         <!-- android:exported="false"> -->
         <!-- <meta-data -->
@@ -90,6 +90,9 @@
             android:parentActivityName=".HomePage" />
         <activity
             android:name=".MedicalHistory"
+            android:parentActivityName=".HomePage" />
+        <activity
+            android:name=".Vaccination"
             android:parentActivityName=".HomePage" />
     </application>
 
