--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,20 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FYProject"
         tools:targetApi="31">
+<!--        <activity-->
+<!--            android:name=".QRCode"-->
+<!--            android:exported="false">-->
+<!--            <meta-data-->
+<!--                android:name="android.app.lib_name"-->
+<!--                android:value="" />-->
+<!--        </activity>-->
+        <!-- <activity -->
+        <!-- android:name=".Testing" -->
+        <!-- android:exported="false"> -->
+        <!-- <meta-data -->
+        <!-- android:name="android.app.lib_name" -->
+        <!-- android:value="" /> -->
+        <!-- </activity> -->
         <!-- <activity -->
         <!-- android:name=".MedicalHistory" -->
         <!-- android:exported="false"> -->
@@ -93,6 +107,9 @@
             android:parentActivityName=".HomePage" />
         <activity
             android:name=".Vaccination"
+            android:parentActivityName=".HomePage" />
+        <activity
+            android:name=".QRCode"
             android:parentActivityName=".HomePage" />
     </application>
 
