--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.persmission.CAMERA"/>
 
     <uses-feature
         android:glEsVersion="0x00020000"
@@ -90,6 +91,10 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+        <activity android:name=".CaptureAct"
+            android:screenOrientation="portrait"
+            android:stateNotNeeded="true"
+            android:theme="@style/zxing_CaptureTheme" />
         <activity android:name=".login" />
         <activity android:name=".register" />
         <activity android:name=".HomePage" />
@@ -110,6 +115,9 @@
             android:parentActivityName=".HomePage" />
         <activity
             android:name=".QRCode"
+            android:parentActivityName=".HomePage" />
+        <activity
+            android:name=".Testing"
             android:parentActivityName=".HomePage" />
     </application>
 
