working on developing the health care section and the map feature

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,9 @@ android {
 
     defaultConfig {
         applicationId "com.example.fyproject"
-        minSdk 21
+        minSdk 26
         targetSdk 31
+        compileSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -24,6 +25,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    buildFeatures{
+        viewBinding true
+    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
