--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,21 +23,27 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FYProject"
         tools:targetApi="31">
-
 <!--        <activity-->
-<!--            android:name=".Alarm"-->
+<!--            android:name=".Test"-->
 <!--            android:exported="false">-->
 <!--            <meta-data-->
 <!--                android:name="android.app.lib_name"-->
 <!--                android:value="" />-->
 <!--        </activity>-->
-<!--        <activity-->
-<!--            android:name=".Blood"-->
-<!--            android:exported="false">-->
-<!--            <meta-data-->
-<!--                android:name="android.app.lib_name"-->
-<!--                android:value="" />-->
-<!--        </activity> &lt;!&ndash; <activity &ndash;&gt;-->
+        <!-- <activity -->
+        <!-- android:name=".Alarm" -->
+        <!-- android:exported="false"> -->
+        <!-- <meta-data -->
+        <!-- android:name="android.app.lib_name" -->
+        <!-- android:value="" /> -->
+        <!-- </activity> -->
+        <!-- <activity -->
+        <!-- android:name=".Blood" -->
+        <!-- android:exported="false"> -->
+        <!-- <meta-data -->
+        <!-- android:name="android.app.lib_name" -->
+        <!-- android:value="" /> -->
+        <!-- </activity> &lt;!&ndash; <activity &ndash;&gt; -->
         <!-- android:name=".HealthCare" -->
         <!-- android:exported="false"> -->
         <!-- <meta-data -->
@@ -98,10 +104,7 @@
 
         <uses-library
             android:name="org.apache.http.legacy"
-            android:required="false" />
-
-<!--        <activity android:name=".DestinationActivity"></activity>-->
-
+            android:required="false" /> <!-- <activity android:name=".DestinationActivity"></activity> -->
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -115,14 +118,11 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
-
         <activity
             android:name=".CaptureAct"
             android:screenOrientation="portrait"
             android:stateNotNeeded="true"
             android:theme="@style/zxing_CaptureTheme" />
-
         <activity android:name=".login" />
         <activity android:name=".register" />
         <activity android:name=".HomePage" />
