--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,68 +23,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FYProject"
         tools:targetApi="31">
-<!--        <activity-->
-<!--            android:name=".Forms"-->
-<!--            android:exported="false">-->
-<!--            <meta-data-->
-<!--                android:name="android.app.lib_name"-->
-<!--                android:value="" />-->
-<!--        </activity>-->
-        <!-- <activity -->
-        <!-- android:name=".Test" -->
-        <!-- android:exported="false"> -->
-        <!-- <meta-data -->
-        <!-- android:name="android.app.lib_name" -->
-        <!-- android:value="" /> -->
-        <!-- </activity> -->
-        <!-- <activity -->
-        <!-- android:name=".Alarm" -->
-        <!-- android:exported="false"> -->
-        <!-- <meta-data -->
-        <!-- android:name="android.app.lib_name" -->
-        <!-- android:value="" /> -->
-        <!-- </activity> -->
-        <!-- <activity -->
-        <!-- android:name=".Blood" -->
-        <!-- android:exported="false"> -->
-        <!-- <meta-data -->
-        <!-- android:name="android.app.lib_name" -->
-        <!-- android:value="" /> -->
-        <!-- </activity> &lt;!&ndash; <activity &ndash;&gt; -->
-        <!-- android:name=".HealthCare" -->
-        <!-- android:exported="false"> -->
-        <!-- <meta-data -->
-        <!-- android:name="android.app.lib_name" -->
-        <!-- android:value="" /> -->
-        <!-- </activity> -->
-        <!-- <activity -->
-        <!-- android:name=".QRCode" -->
-        <!-- android:exported="false"> -->
-        <!-- <meta-data -->
-        <!-- android:name="android.app.lib_name" -->
-        <!-- android:value="" /> -->
-        <!-- </activity> -->
-        <!-- <activity -->
-        <!-- android:name=".Testing" -->
-        <!-- android:exported="false"> -->
-        <!-- <meta-data -->
-        <!-- android:name="android.app.lib_name" -->
-        <!-- android:value="" /> -->
-        <!-- </activity> -->
-        <!-- <activity -->
-        <!-- android:name=".MedicalHistory" -->
-        <!-- android:exported="false"> -->
-        <!-- <meta-data -->
-        <!-- android:name="android.app.lib_name" -->
-        <!-- android:value="" /> -->
-        <!-- </activity> -->
-        <!-- &lt;!&ndash; <activity &ndash;&gt; -->
-        <!-- android:name=".HealthProblems" -->
-        <!-- android:exported="false"> -->
-        <!-- <meta-data -->
-        <!-- android:name="android.app.lib_name" -->
-        <!-- android:value="" /> -->
-        <!-- </activity> -->
+
         <!--
              TODO: Before you run your application, you need a Google Maps API key.
 
@@ -111,7 +50,7 @@
 
         <uses-library
             android:name="org.apache.http.legacy"
-            android:required="false" /> <!-- <activity android:name=".DestinationActivity"></activity> -->
+            android:required="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -133,9 +72,7 @@
         <activity android:name=".login" />
         <activity android:name=".register" />
         <activity android:name=".HomePage" />
-<!--        <activity-->
-<!--            android:name=".PersonalDetails"-->
-<!--            android:parentActivityName=".HomePage" />-->
+
         <activity
             android:name=".Infections"
             android:parentActivityName=".Forms" />
